unpackaged/main/default/objects/Live_Event_Coverage__c/fields/EventStartForWorkflow__c.field-meta.xml
<CustomField>
    <fullName>EventStartForWorkflow__c</fullName>
    <formula>DATETIMEVALUE(DATE(VALUE(TEXT( Event_Start_Year__c )),VALUE(TEXT( Event_Start_Month__c )),VALUE(TEXT( Event_Start_Day__c )))) + ( (VALUE(TEXT(Event_Start_Hour__c ))/24) + (VALUE(TEXT(Event_Start_Minute__c ))/1440))</formula>
    <label>EventStartForWorkflow</label>
    <type>DateTime</type>
</CustomField>