unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Full_Coverage_duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Full_Coverage_duration_hours__c</fullName>
    <description>It replaced the &#39;Full Event duration (hours)&#39; field</description>
    <formula>(DATETIMEVALUE( TEXT(Event_End_Date__c)&amp;&quot; &quot;&amp; LEFT(TEXT(Event_End_Time__c),8)) 
- 
DATETIMEVALUE(TEXT(Event_Start_Date__c)&amp;&quot; &quot;&amp; LEFT(TEXT(Event_Start_Time__c),8)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Coverage duration (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>