unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Has_Case__c.field-meta.xml
<CustomField>
    <fullName>Has_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Case</label>
    <type>Checkbox</type>
</CustomField>