unpackaged/main/default/objects/Live_Event_Coverage__c/fields/High_Profile_Event_Notification_Form__c.field-meta.xml
<CustomField>
    <fullName>High_Profile_Event_Notification_Form__c</fullName>
    <inlineHelpText>If not available yet, add TBD. Note that you will be required to add the information prior to the event.</inlineHelpText>
    <label>High Profile Event Notification Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>