unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Hours_Covered_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Hours_Covered_So_Far__c</fullName>
    <inlineHelpText>This is the sum of the timings that have been created on this object.</inlineHelpText>
    <label>Hours Covered So Far</label>
    <summarizedField>Live_Event_Coverage_Timing__c.Coverage_Duration_hours__c</summarizedField>
    <summaryFilterItems>
        <field>Live_Event_Coverage_Timing__c.Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </summaryFilterItems>
    <summaryForeignKey>Live_Event_Coverage_Timing__c.CoverageLink__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>