unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Is_Live_Module_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Live_Module_Used__c</fullName>
    <label>Is Live Module Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>