unpackaged/main/default/objects/Live_Event_Coverage__c/fields/LE_updated_for_Zapier__c.field-meta.xml
<CustomField>
    <fullName>LE_updated_for_Zapier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to update checkbox in Case for sending outbound message to Zapier and Google Calendar</description>
    <label>LE updated for Zapier</label>
    <type>Checkbox</type>
</CustomField>