unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Legacy_Live_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Live_Event_Name__c</fullName>
    <label>Legacy Live Event Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>