unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Legacy_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_Name__c</fullName>
    <label>Legacy Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>