unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Legacy_opportuny_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_opportuny_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy opportuny ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>