unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Live_Product__c.field-meta.xml
<CustomField>
    <fullName>Live_Product__c</fullName>
    <description>Please specify the live-event product for this event.</description>
    <inlineHelpText>Please specify the live-event product for this event.</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brightcove Live</fullName>
            </value>
            <value>
                <fullName>Brightcove Live with SSAI</fullName>
                <label>Live SSAI</label>
            </value>
            <value>
                <fullName>Live DVR</fullName>
            </value>
            <value>
                <fullName>Live DRM</fullName>
            </value>
            <value>
                <fullName>Live Redundancy</fullName>
            </value>
            <value>
                <fullName>Clipping</fullName>
                <label>Live Clipping</label>
            </value>
            <value>
                <fullName>Remote Asset (3rd party Live) - BC Managed</fullName>
            </value>
            <value>
                <fullName>Remote Asset (3rd party Live) - BYO</fullName>
            </value>
            <value>
                <fullName>Cloud Playout</fullName>
            </value>
            <value>
                <fullName>Simulive</fullName>
            </value>
            <value>
                <fullName>Virtual Events Template</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Playback Rights/Geo-restriction</fullName>
            </value>
            <value>
                <fullName>Key Rotation</fullName>
            </value>
            <value>
                <fullName>Non-live (Ingestion/Playback API/etc.)</fullName>
            </value>
            <value>
                <fullName>Pigeonhole</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>