unpackaged/main/default/objects/Live_Event_Coverage__c/fields/MAX_CCU_Actual__c.field-meta.xml
<CustomField>
    <fullName>MAX_CCU_Actual__c</fullName>
    <description>Max concurrent users - actual value</description>
    <inlineHelpText>Max concurrent users - actual value</inlineHelpText>
    <label>MAX CCU - Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>