unpackaged/main/default/objects/Live_Event_Coverage__c/fields/MAX_CCU_Estimated__c.field-meta.xml
<CustomField>
    <fullName>MAX_CCU_Estimated__c</fullName>
    <description>Max concurrent users ESTIMATED</description>
    <inlineHelpText>Max concurrent users estimated</inlineHelpText>
    <label>MAX CCU - Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>