unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Number_of_Off_Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Off_Hours_Covered__c</fullName>
    <label>Number of Off Hours Covered</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>