unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Off_Hours_Covered_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Covered_So_Far__c</fullName>
    <inlineHelpText>This is a summary of the # of off hours covered on the event.</inlineHelpText>
    <label>Off Hours Covered So Far</label>
    <summarizedField>Live_Event_Coverage_Timing__c.Off_Hours_Covered__c</summarizedField>
    <summaryFilterItems>
        <field>Live_Event_Coverage_Timing__c.Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </summaryFilterItems>
    <summaryForeignKey>Live_Event_Coverage_Timing__c.CoverageLink__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>