unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <description>Workflow rule applies the Coverage Manager&#39;s email to this field for automatic alerting.</description>
    <inlineHelpText>How&#39;d you even find this field?</inlineHelpText>
    <label>Owner&#39;s Manager</label>
    <type>Email</type>
</CustomField>