unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Preferred_date_and_time_for_testing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_date_and_time_for_testing__c</fullName>
    <label>Preferred date and time for testing</label>
    <type>DateTime</type>
</CustomField>