unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Publisher_ID__c.field-meta.xml
<CustomField>
    <fullName>Publisher_ID__c</fullName>
    <inlineHelpText>The specific Publisher ID hosting the event under the &quot;Account&quot; field.</inlineHelpText>
    <label>Publisher ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>