unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Remaining_Hours_to_cover__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours_to_cover__c</fullName>
    <formula>Full_Coverage_duration_hours__c - Hours_Covered_So_Far__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours to cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>