unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Reported_Issues__c.field-meta.xml
<CustomField>
    <fullName>Reported_Issues__c</fullName>
    <inlineHelpText>Issues observed or reported during the event</inlineHelpText>
    <label>Notes and Reported Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>