unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Requested_amount_of_hours__c.field-meta.xml
<CustomField>
    <fullName>Requested_amount_of_hours__c</fullName>
    <formula>(Coverage_End_Date_Time__c -  Coverage_Start_Date_Time__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested amount of hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>