unpackaged/main/default/objects/Live_Event_Coverage__c/fields/Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time__c</fullName>
    <description>This field is to keep track of when the request came in</description>
    <label>Requested during</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sydney Business Hour</fullName>
            </value>
            <value>
                <fullName>Tokyo Business Hour</fullName>
            </value>
            <value>
                <fullName>London Business Hour</fullName>
            </value>
            <value>
                <fullName>Boston/GDL Business Hour</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>